# Buddhas-Watch

./: FIRMWARE_CHANGELOG.md  LICENSE  MERGE_STRATEGY.md  README.md  SECURITY_IMPROVEMENTS.md
backend/app_store/: README.md  package.json  server.js
backend/app_store/apps/: manifest.json
companion/: README.md
companion/android/: build.gradle
companion/android/app/: build.gradle
companion/desktop/: csi_companion.py  requirements.txt
deployment/systemd/: buddhas-watch-spectrogram.service  buddhas-watch.service  install.sh
docs/architecture/: README.md
docs/calibration/: README.md
docs/protocols/: README.md
firmware/esp32-s3/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/esp32-s3/main/: CMakeLists.txt  app_manager.c  app_manager.h  ble_csi_app.c  ble_csi_app.h  cmd_receiver.c  cmd_receiver.h  config.h  hardware_stubs.c  hw_control.c  main.c  main.cpp  settings_app.c  settings_app.h  transport_manager.c  transport_manager.h  watch_os.cpp  watch_os.hpp  wifi_csi_app.c  wifi_csi_app.h
python/analysis/: csi_log_analyzer.py  multi_node_correlator.py
python/countermeasures/: esp32_alert.py
python/csi_monitor/: csi_defense.py  csi_phase_coherence_monitor.py  csi_phase_variance_monitor.py  csi_spectrogram_monitor.py  multi_watch_aggregator.py  transport_manager.py
python/quantum/: quantum_enhanced_detection.py  variational_anomaly.py
python/tests/: test_transport_manager.py
python/tools/: baseline_calibrator.py  fleet_broadcaster.py  transport_manager.py
scripts/: flash_watch.sh  setup_esp_idf.sh  setup_jetson.sh
(+31 files in other folders)
